tests/trybuild/whitespace_macros.stderr
error[E0601]: `main` function not found in crate `$CRATE`
  --> tests/trybuild/whitespace_macros.rs:11:3
   |
11 | );
   |   ^ consider adding a `main` function to `$DIR/tests/trybuild/whitespace_macros.rs`
